refactor tests to use embed kafka-connect to allow debuging connector code